# src/swagger.json
@@ -1,73 +1,190 @@
 {
-  "openapi": "3.0.0",
-  "info": {
-    "title": "RentalX Documentation",
-    "description": "This is an API Rent",
-    "version": "1.0.0",
-    "contact": {
-      "email": "behsalves@gmail.com"
-    }
-  },
-  "paths": {
-    "/categories": {
+	"openapi": "3.0.0",
+	"info": {
+		"title": "RentX Documentation",
+		"description": "This is an API Rent",
+		"version": "1.0.0",
+		"contact": {
+			"email": "behsalves@gmail.com"
+		}
+	},
+	"paths": {
+		"/categories": {
+			"post": {
+				"tags": ["Category"],
+				"summary": "Create a category",
+				"description": "Create a new category",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/definitions/CreateCategoryRequestBodySchema"
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Category Created Sucessfully"
+					},
+					"500": {
+						"description": "Category  Already Exists!"
+					}
+				}
+			},
+			"get": {
+				"tags": ["Category"],
+				"summary": "List all categories",
+				"description": "List all categories",
+				"responses": {
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/definitions/ListCategoryResponsesSchema"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+    "/categories/import": {
       "post": {
-        "summary": "Create a category",
-        "description": "Create a new category",
+        "tags": ["Category"],
+        "summary": "Upload category",
+        "description": "Upload a new category",
         "requestBody": {
           "content": {
-            "application/json": {
+            "application/octet-stream": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                },
-                "example": {
-                  "name": "Category123",
-                  "description": "Description123"
-                }
+                "type": "string"
               }
             }
           }
         },
         "responses": {
           "201": {
-            "description": "Category Created Sucessfully"
-          },
-          "500": {
-            "description": "Category  Already Exists!"
+            "description": "Created"
           }
         }
-      },
-      "get": {
-        "tags": ["Category"],
-        "summary": "List all categories",
-        "description": "List all categories",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "name": {
-                        "type": "string"
-                      },
-                      "description": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                }
+      }
+    },
+		"/specifications": {
+			"post": {
+				"tags": ["Specification"],
+				"summary": "Create a specification",
+				"description": "Create a new specification",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#definitions/CreateSpecificationRequestBodySchema"
+							},
+							"example": {
+								"name": "Specification123",
+								"description": "Specification123"
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Specification Created Sucessfully"
+					},
+					"500": {
+						"description": "Specification  Already Exists!"
+					}
+				}
+			},
+			"get": {
+				"tags": ["Specification"],
+				"summary": "List all specifications",
+				"description": "List all specifications",
+				"responses": {
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#definitions/ListSpecificationResponsesSchema"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+    "/specifications/import": {
+      "post": {
+        "tags": ["Specification"],
+        "summary": "Upload cpecification",
+        "description": "Upload a new cpecification",
+        "requestBody": {
+          "content": {
+            "application/octet-stream": {
+              "schema": {
+                "type": "string"
               }
             }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    }
+	},
+  "definitions": {
+    "CreateCategoryRequestBodySchema": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      }
+    },
+    "ListCategoryResponsesSchema": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "CreateSpecificationRequestBodySchema": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      }
+    },
+    "ListSpecificationResponsesSchema": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
           }
         }
       }
